--- a/index.html
+++ b/index.html
@@ -8,22 +8,46 @@
     <title>Preston Jay</title>
 	<script src="https://kit.fontawesome.com/ad835ba750.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/app.js"></script>
 </head>
 
 <body>
-    <header>
-        <nav>
-
-        </nav>
-    </header>
-    <main>
-        <h1>Preston Jay</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt, vero.</p>
-    </main>
-    <footer>
-
-    </footer>
-    <script src="js/app.js"></script>
+    <span>
+        <img class='cued-img' src='https://images.unsplash.com/photo-1659384485845-5e84e04abd7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60' alt='dancing'>
+        <div class='text-content'>
+            <h2>Title Here</h2>
+            <span>Lorem ipsum dolor sit amet.</span>
+        </div>
+    </span>
+    <span>
+        <img src='https://images.unsplash.com/photo-1659384485845-5e84e04abd7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60' alt='dancing'>
+        <div class='text-content'>
+            <h2>Title Here</h2>
+            <span>Lorem ipsum dolor sit amet.</span>
+        </div>
+    </span>
+    <span>
+        <img src='https://images.unsplash.com/photo-1659384485845-5e84e04abd7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60' alt='dancing'>
+        <div class='text-content'>
+            <h2>Title Here</h2>
+            <span>Lorem ipsum dolor sit amet.</span>
+        </div>
+    </span>
+    <span>
+        <img src='https://images.unsplash.com/photo-1659384485845-5e84e04abd7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60' alt='dancing'>
+        <div class='text-content'>
+            <h2>Title Here</h2>
+            <span>Lorem ipsum dolor sit amet.</span>
+        </div>
+    </span>
+    <span>
+        <img src='https://images.unsplash.com/photo-1659384485845-5e84e04abd7c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyNHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&q=60' alt='dancing'>
+        <div class='text-content'>
+            <h2>Title Here</h2>
+            <span>Lorem ipsum dolor sit amet.</span>
+        </div>
+    </span>
+    
 </body>
 
 </html>
